Render settings are not taken into account for curves #31021

Closed
opened 2012-04-19 21:40:44 +02:00 by David Sheftick · 5 comments

%%%Cycles render ignores the curve's render settings and only uses the preview settings. This applies to both the curve resolution and any modifiers that the curve uses. All types of curves seem to have this same problem.

In the attached file notice that the curve's preview resolution is really low and the render resolution is vary high, same with the screw modifier that the curve uses. When you render the image the curve looks exactly the same as it does in the 3d view.

Tested on Blender 2.62.4 64bit rev45720 and blender-2.63testbuild2-windows64 (official): Windows 7 64bit.

and Blender 2.62.4 32bit rev45769 Ubuntu 11.04 32 bit.

4GB ram

NVIDIA Quadro 1600M

#9500 Core 2 Duo @ 2.6 GHz.%%%

%%%Cycles render ignores the curve's render settings and only uses the preview settings. This applies to both the curve resolution and any modifiers that the curve uses. All types of curves seem to have this same problem. In the attached file notice that the curve's preview resolution is really low and the render resolution is vary high, same with the screw modifier that the curve uses. When you render the image the curve looks exactly the same as it does in the 3d view. Tested on Blender 2.62.4 64bit rev45720 and blender-2.63testbuild2-windows64 (official): Windows 7 64bit. and Blender 2.62.4 32bit rev45769 Ubuntu 11.04 32 bit. 4GB ram NVIDIA Quadro 1600M #9500 Core 2 Duo @ 2.6 GHz.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Checked it,
rna_object_api.c is missing "BKE_displist_make_curveTypes_forRender" in case its a F12 render. %%%

%%%Checked it, rna_object_api.c is missing "BKE_displist_make_curveTypes_forRender" in case its a F12 render. %%%

%%%Would check on this.%%%

%%%Would check on this.%%%

%%%Fixed in svn rev48920. Thanks for the report, closing.%%%

%%%Fixed in svn rev48920. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31021
No description provided.